module(name = "rules_pcl", version = "0.0.0")

bazel_dep(name = "boost.algorithm", version = "1.83.0.bzl.1")
bazel_dep(name = "boost.array", version = "1.83.0.bzl.1")
bazel_dep(name = "boost.asio", version = "1.83.0.bzl.2")
bazel_dep(name = "boost.bimap", version = "1.83.0.bzl.1")
bazel_dep(name = "boost.circular_buffer", version = "1.83.0.bzl.1")
bazel_dep(name = "boost.core", version = "1.83.0.bzl.1")
bazel_dep(name = "boost.dynamic_bitset", version = "1.83.0.bzl.1")
bazel_dep(name = "boost.filesystem", version = "1.83.0.bzl.3")
bazel_dep(name = "boost.foreach", version = "1.83.0.bzl.1")
bazel_dep(name = "boost.format", version = "1.83.0.bzl.1")
bazel_dep(name = "boost.fusion", version = "1.83.0.bzl.1")
bazel_dep(name = "boost.graph", version = "1.83.0.bzl.1")
bazel_dep(name = "boost.interprocess", version = "1.83.0.bzl.1")
bazel_dep(name = "boost.iostreams", version = "1.83.0.bzl.2")
bazel_dep(name = "boost.lexical_cast", version = "1.83.0.bzl.1")
bazel_dep(name = "boost.math", version = "1.83.0.bzl.1")
bazel_dep(name = "boost.mpl", version = "1.83.0.bzl.1")
bazel_dep(name = "boost.multi_array", version = "1.83.0.bzl.1")
bazel_dep(name = "boost.multiprecision", version = "1.83.0.bzl.1")
bazel_dep(name = "boost.numeric_conversion", version = "1.83.0.bzl.1")
bazel_dep(name = "boost.optional", version = "1.83.0.bzl.1")
bazel_dep(name = "boost.predef", version = "1.83.0.bzl.1")
bazel_dep(name = "boost.preprocessor", version = "1.83.0.bzl.1")
bazel_dep(name = "boost.property_map", version = "1.83.0.bzl.1")
bazel_dep(name = "boost.property_tree", version = "1.83.0.bzl.1")
bazel_dep(name = "boost.ptr_container", version = "1.83.0.bzl.1")
bazel_dep(name = "boost.random", version = "1.83.0.bzl.1")
bazel_dep(name = "boost.signals2", version = "1.83.0.bzl.1")
bazel_dep(name = "boost.smart_ptr", version = "1.83.0.bzl.1")
bazel_dep(name = "boost.sort", version = "1.83.0.bzl.1")
bazel_dep(name = "boost.tokenizer", version = "1.83.0.bzl.1")
bazel_dep(name = "boost.utility", version = "1.83.0.bzl.1")
bazel_dep(name = "eigen", version = "3.4.0.bcr.1")
bazel_dep(name = "googletest", version = "1.14.0", repo_name = "com_google_googletest")
bazel_dep(name = "libpng", version = "1.6.40")
bazel_dep(name = "lz4", version = "1.9.4")
bazel_dep(name = "platforms", version = "0.0.8")
bazel_dep(name = "bazel_skylib", version = "1.4.2")
bazel_dep(name = "zlib", version = "1.3", repo_name = "net_zlib_zlib")
# -- bazel_dep definitions -- #

non_module_deps = use_extension("//bzl:extensions.bzl", "non_module_deps")
use_repo(non_module_deps, "pcl")
use_repo(non_module_deps, "flann")
use_repo(non_module_deps, "qhull")
# End of extension `non_module_deps`
